--- a/dc.gitworkshop.stringCalculator/dc.gitworkshop.stringCalculator.csproj
+++ b/dc.gitworkshop.stringCalculator/dc.gitworkshop.stringCalculator.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>dc.gitworkshop.stringCalculator</RootNamespace>
     <AssemblyName>dc.gitworkshop.stringCalculator</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
